--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           border-collapse: collapse;
         }
         </style>
-        <link rel="stylesheet"  href="C:\Users\csomosa\Desktop\B\bteszt\Orarend\style.css" />
+        <link rel="stylesheet"  href="style.css" />
     </head>
         <body>
         
